# realtime-ecommerce-funnel-analytics

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
airflow/dags/: build_daily_analytics_marts.py
apps/event_generator/: __init__.py  main.py
docs/: architecture.md  data_contract.md  gcp-mapping.md  runbook.md
infra/docker/: airflow.Dockerfile
infra/postgres/: products_seed.csv
infra/postgres/init/: 00_create_airflow_db.sql
jobs/: __init__.py
jobs/batch/: __init__.py  build_daily_analytics.py  run_quality_checks.py
jobs/streaming/: __init__.py  process_events.py
sql/checks/: 01_daily_kpis_not_empty.sql  02_no_duplicate_event_ids.sql  03_non_negative_revenue.sql  04_product_metrics_not_empty.sql
sql/ddl/: 01_create_schemas.sql  02_create_staging_user_events_silver.sql  03_create_analytics_tables.sql
sql/marts/: 01_daily_kpis.sql  02_conversion_funnel.sql  03_session_metrics.sql  04_product_daily_metrics.sql
src/de_pipeline/: __init__.py
src/de_pipeline/config/: __init__.py  settings.py
src/de_pipeline/logging/: __init__.py  structured.py
src/de_pipeline/quality/: __init__.py  checks.py
src/de_pipeline/schemas/: __init__.py  event.py
src/de_pipeline/utils/: __init__.py  analytics.py  paths.py  spark.py
tests/fixtures/: sample_events.json  sample_products.csv
tests/integration/: test_airflow_dag.py  test_batch_aggregations.py  test_streaming_transforms.py
tests/unit/: test_analytics.py  test_event_generator.py  test_event_schema.py  test_quality_checks.py
